# rusty_python

./: .gitignore  Cargo.toml  README.md  pyproject.toml
src/: lib.rs
stl/: Stanford_Bunny.stl  demo.stl
